app/src/main/java/de/timklge/karooroutegraph/ohparser/ohminParser.java
/*
 * Copyright 2026 timklge
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.timklge.karooroutegraph.ohparser;// Generated from karoo-routegraph/app/src/main/ohmin.g4 by ANTLR 4.13.2

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ohminParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, NUMBERS=52, 
		COMMENT=53, WS=54;
	public static final int
		RULE_c247string = 0, RULE_cdayoftheweek = 1, RULE_cworkdays = 2, RULE_cworkdays2letters = 3, 
		RULE_cworkdays3letters = 4, RULE_cweekend = 5, RULE_cweekend2letters = 6, 
		RULE_cweekend3letters = 7, RULE_cmonth = 8, RULE_csunlightevent = 9, RULE_coffsetsymbols = 10, 
		RULE_cminute = 11, RULE_chour = 12, RULE_cday = 13, RULE_cweeknum = 14, 
		RULE_cwrappinghour = 15, RULE_positive_integer = 16, RULE_negative_integer = 17, 
		RULE_hh_mm = 18, RULE_comment = 19, RULE_nth_entry = 20, RULE_opening_hours = 21, 
		RULE_rule_sequence = 22, RULE_rule_separator = 23, RULE_rule_modifier = 24, 
		RULE_rule_modifier_open = 25, RULE_rule_modifier_closed = 26, RULE_rule_modifier_unknown = 27, 
		RULE_rule_modifier_comment = 28, RULE_selector_sequence = 29, RULE_small_range_selectors = 30, 
		RULE_weekday_selector = 31, RULE_weekday_sequence = 32, RULE_weekday_ranges = 33, 
		RULE_weekday_ranges_single = 34, RULE_weekday_ranges_range = 35, RULE_weekday_ranges_range_nth = 36, 
		RULE_weekday_ranges_range_nth_offset = 37, RULE_holiday_sequence = 38, 
		RULE_holiday = 39, RULE_day_offset = 40, RULE_time_selector = 41, RULE_timespan = 42, 
		RULE_timespan_range = 43, RULE_timespan_range_openended = 44, RULE_timespan_range_cron = 45, 
		RULE_timespan_openended = 46, RULE_time = 47, RULE_variable_time = 48, 
		RULE_wide_range_selectors = 49, RULE_year_sel = 50, RULE_year_selector = 51, 
		RULE_year_selector_range = 52, RULE_year_selector_range_cron = 53, RULE_year_selector_single = 54, 
		RULE_year_selector_single_cron = 55, RULE_year_selector_single_openended = 56, 
		RULE_calendarmonth_selector = 57, RULE_calendarmonth_range = 58, RULE_calendarmonth_range_single = 59, 
		RULE_calendarmonth_range_range = 60, RULE_calendarmonth_range_cron = 61, 
		RULE_calendarmonth_range_from_openended = 62, RULE_calendarmonth_range_from_to = 63, 
		RULE_date_offset = 64, RULE_date_from = 65, RULE_date_to = 66, RULE_moveable_holidays = 67, 
		RULE_week_selector = 68, RULE_week = 69, RULE_week_single = 70, RULE_week_range = 71, 
		RULE_week_range_cron = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"c247string", "cdayoftheweek", "cworkdays", "cworkdays2letters", "cworkdays3letters", 
			"cweekend", "cweekend2letters", "cweekend3letters", "cmonth", "csunlightevent", 
			"coffsetsymbols", "cminute", "chour", "cday", "cweeknum", "cwrappinghour", 
			"positive_integer", "negative_integer", "hh_mm", "comment", "nth_entry", 
			"opening_hours", "rule_sequence", "rule_separator", "rule_modifier", 
			"rule_modifier_open", "rule_modifier_closed", "rule_modifier_unknown", 
			"rule_modifier_comment", "selector_sequence", "small_range_selectors", 
			"weekday_selector", "weekday_sequence", "weekday_ranges", "weekday_ranges_single", 
			"weekday_ranges_range", "weekday_ranges_range_nth", "weekday_ranges_range_nth_offset", 
			"holiday_sequence", "holiday", "day_offset", "time_selector", "timespan", 
			"timespan_range", "timespan_range_openended", "timespan_range_cron", 
			"timespan_openended", "time", "variable_time", "wide_range_selectors", 
			"year_sel", "year_selector", "year_selector_range", "year_selector_range_cron", 
			"year_selector_single", "year_selector_single_cron", "year_selector_single_openended", 
			"calendarmonth_selector", "calendarmonth_range", "calendarmonth_range_single", 
			"calendarmonth_range_range", "calendarmonth_range_cron", "calendarmonth_range_from_openended", 
			"calendarmonth_range_from_to", "date_offset", "date_from", "date_to", 
			"moveable_holidays", "week_selector", "week", "week_single", "week_range", 
			"week_range_cron"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'24/7'", "'Mo'", "'Tu'", "'We'", "'Th'", "'Fr'", "'Mon'", "'Tue'", 
			"'Wed'", "'Thu'", "'Fri'", "'Sa'", "'Su'", "'Sat'", "'Sun'", "'Jan'", 
			"'Feb'", "'Mar'", "'Apr'", "'May'", "'Jun'", "'Jul'", "'Aug'", "'Sep'", 
			"'Oct'", "'Nov'", "'Dec'", "'dawn'", "'sunrise'", "'sunset'", "'dusk'", 
			"'+'", "'-'", "':'", "'\"\"'", "';'", "' || '", "'open'", "'closed'", 
			"'off'", "'unknown'", "','", "'['", "']'", "'PH'", "'SH'", "'day'", "'s'", 
			"'/'", "'easter'", "'week '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "NUMBERS", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ohmin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ohminParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C247stringContext extends ParserRuleContext {
		public C247stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c247string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterC247string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitC247string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitC247string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C247stringContext c247string() throws RecognitionException {
		C247stringContext _localctx = new C247stringContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_c247string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CdayoftheweekContext extends ParserRuleContext {
		public CworkdaysContext cworkdays() {
			return getRuleContext(CworkdaysContext.class,0);
		}
		public CweekendContext cweekend() {
			return getRuleContext(CweekendContext.class,0);
		}
		public CdayoftheweekContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cdayoftheweek; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCdayoftheweek(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCdayoftheweek(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCdayoftheweek(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CdayoftheweekContext cdayoftheweek() throws RecognitionException {
		CdayoftheweekContext _localctx = new CdayoftheweekContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cdayoftheweek);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				cworkdays();
				}
				break;
			case T__11:
			case T__12:
			case T__13:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				cweekend();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CworkdaysContext extends ParserRuleContext {
		public Cworkdays2lettersContext cworkdays2letters() {
			return getRuleContext(Cworkdays2lettersContext.class,0);
		}
		public Cworkdays3lettersContext cworkdays3letters() {
			return getRuleContext(Cworkdays3lettersContext.class,0);
		}
		public CworkdaysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cworkdays; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCworkdays(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCworkdays(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCworkdays(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CworkdaysContext cworkdays() throws RecognitionException {
		CworkdaysContext _localctx = new CworkdaysContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cworkdays);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				cworkdays2letters();
				}
				break;
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				cworkdays3letters();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cworkdays2lettersContext extends ParserRuleContext {
		public Cworkdays2lettersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cworkdays2letters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCworkdays2letters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCworkdays2letters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCworkdays2letters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cworkdays2lettersContext cworkdays2letters() throws RecognitionException {
		Cworkdays2lettersContext _localctx = new Cworkdays2lettersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cworkdays2letters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 124L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cworkdays3lettersContext extends ParserRuleContext {
		public Cworkdays3lettersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cworkdays3letters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCworkdays3letters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCworkdays3letters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCworkdays3letters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cworkdays3lettersContext cworkdays3letters() throws RecognitionException {
		Cworkdays3lettersContext _localctx = new Cworkdays3lettersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cworkdays3letters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3968L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CweekendContext extends ParserRuleContext {
		public Cweekend2lettersContext cweekend2letters() {
			return getRuleContext(Cweekend2lettersContext.class,0);
		}
		public Cweekend3lettersContext cweekend3letters() {
			return getRuleContext(Cweekend3lettersContext.class,0);
		}
		public CweekendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cweekend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCweekend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCweekend(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCweekend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CweekendContext cweekend() throws RecognitionException {
		CweekendContext _localctx = new CweekendContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cweekend);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				cweekend2letters();
				}
				break;
			case T__13:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				cweekend3letters();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cweekend2lettersContext extends ParserRuleContext {
		public Cweekend2lettersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cweekend2letters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCweekend2letters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCweekend2letters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCweekend2letters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cweekend2lettersContext cweekend2letters() throws RecognitionException {
		Cweekend2lettersContext _localctx = new Cweekend2lettersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cweekend2letters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_la = _input.LA(1);
			if ( !(_la==T__11 || _la==T__12) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cweekend3lettersContext extends ParserRuleContext {
		public Cweekend3lettersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cweekend3letters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).enterCweekend3letters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ohminListener ) ((ohminListener)listener).exitCweekend3letters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ohminVisitor ) return ((ohminVisitor<? extends T>)visitor).visitCweekend3letters(this);
			else return visitor.visitChildren(this);
		}
	}
